# ADE

./: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old  README  README.md  TODO  ac  ad  ade  ade.h  ade_base.c  ade_ddt.c  ade_dz80.c  ade_extvar.h  ade_fdc.c  ade_gresource.xml  ade_gvar.h  ade_hdc.c  ade_io.c  ade_kbd_codes.h  ade_keyboard.c  ade_main.c  ade_monitor.c  ade_trap.c  ade_x11.c  ade_z80.c  aderc  aderc.cpm  aderc.hdos  configure  configure.ac  easy-build.sh  extra-file-setup.sh  mkhd
disks/: AAA_SYSTEM_DISKS_README.TXT  CPM-H-XFER_120A1.NSI  CPMBASIC_120A1.NSI  DEMODIAG.NSI  DEMODIAG_200.NSI  DOSGBASIC_200.NSI  GHD200_RECOVERY.NSI  HCPM2FD.NSI  HDSUPPLEMENT_220.NSI  adv_ghdos_200.nsi  advf2_cpm120_wm.nsi  holger_test_img.nsi  jvs-xfer-utils-work.nsi  xxxxjunk.nsi
documentation/: AAA_differences_full_HDOS_and_CPM_HDOS_subset.txt
extra/: ade.conf  advantage.desktop
gresources/: break_top.glade  debugtop.glade  disks.glade  gxe_top.glade  ioports.glade  mem_top.glade  slot.glade
info/: LOCAL-key-commands.txt  advantage_boot_rom.asm  advantage_boot_rom.asm.000  advantage_io_device_numbers.txt  advantage_std_charset.txt  cpm_sec_ldr_ec0a.asm  cpm_sec_load_ec0a.asm  debug.txt  floppy_hardware_options.txt  gdos-routines.txt  gdos-sector_map.txt  jvs_adv_cpmgen.com
north_star_tools/: Makefile  chk_sector  chk_sector.c  cleanit  compact  compact.c  jdz80  jdz80.c  li  mkfs.ns  mkfs.ns.c  mkhd  mkhd.c  ni  nsd.h  nsfd2u  nsfd2u.c  nsfdls  nsfdls.c  nsfilecalc  nsfilecalc.c  nshdbm  nshdbm.c  nshdcp  nshdcp.c  nshdinfo  nshdinfo.c  nshdls  nshdls.c  printnsb  printnsb.c  test.bas  transient.c  u2nsfd  u2nsfd.c  unskew-hd-image  unskew-hd-image.c
src/: ade.h  ade_base.c  ade_breaktrap.c  ade_charset.h  ade_config.c  ade_ddt.c  ade_debug.c  ade_disks.c  ade_display.c  ade_dz80.c  ade_extvars.h  ade_fdc.c  ade_file_choose.c  ade_gvars.h  ade_hdc.c  ade_inputs.c  ade_io.c  ade_ioports.c  ade_kbd_codes.h  ade_launch_ade.c  ade_launch_gui.c  ade_main.c  ade_mem.c  ade_slot_card.c  ade_trap.c  ade_xdg_paths.c  ade_z80.c  advantage_keyboard_scancodes.h  jfuncs.c  makedate.h  mk_resource_xml  mkinitialconf  mkinitialconf.new  mklauncher  mklauncher.new
src/north_star_tools/: Makefile  Makefile.am  Makefile.in  chk_sector.c  compact.c  jdz80.c  mkfs.ns.c  mkhd.c  nsd.h  nsfd2u.c  nsfdls.c  nsfilecalc.c  nshdbm.c  nshdcp.c  nshdinfo.c  nshdls.c  print_nsb_tokens.h  printnsb.c  test_aread.bas  test_printnsb.nsb  transient_adv.c  transient_adv.h  transient_hzn.c  transient_hzn.h  u2nsfd.c  unskew-hd-image.c
