
# This file is part of the North Star Advantage Emulator (ade)
# configure.ac - autoconf file

# Copyright (C) 2024 Sage I. Hendricks
# GPL V2 */

AC_INIT([ADE], [0.6], [sage.message@email.com])
AM_INIT_AUTOMAKE([foreign subdir-objects -Wall])
AC_PROG_CC
AC_CONFIG_FILES([
    Makefile
    src/north_star_tools/Makefile
])
AC_OUTPUT

