
bin_PROGRAMS = chk_sector \
			   compact \
			   jdz80 \
			   mkfs.ns \
			   mkhd \
			   nsfd2u \
			   nsfdls \
			   nsfilecalc \
			   nshdbm \
			   nshdcp \
			   nshdinfo \
			   nshdls \
			   printnsb \
			   u2nsfd \
			   unskew-hd-image

chk_sector_SOURCES = chk_sector.c

compact_SOURCES = compact.c \
				  nsd.h

jdz80_SOURCES = jdz80.c

mkfs_ns_SOURCES = mkfs.ns.c

mkhd_SOURCES = mkhd.c

nsfd2u_SOURCES = nsfd2u.c \
				 nsd.h

nsfdls_SOURCES = nsfdls.c \
				 nsd.h

nsfilecalc_SOURCES = nsfilecalc.c

nshdbm_SOURCES = nshdbm.c

nshdcp_SOURCES = nshdcp.c

nshdinfo_SOURCES = nshdinfo.c

nshdls_SOURCES = nshdls.c

printnsb_SOURCES = printnsb.c \
				   print_nsb_tokens.h

u2nsfd_SOURCES = u2nsfd.c \
				 nsd.h

unskew_hd_image_SOURCES = unskew-hd-image.c

