
# This file is part of the northstar-unix tools for both ADE and NSE */
# north_star_tools/Makefile.in - automake makefile template

# Heavily based on the original Makefile 

# Copyright (C) 1995-2017 Jack Strangio
# Copyright (C) 2024 Sage I. Hendricks
# GPL2 */

bin_PROGRAMS = chk_sector \
			   compact \
			   jdz80 \
			   mkfs.ns \
			   mkhd \
			   nsfd2u \
			   nsfdls \
			   nsfilecalc \
			   nshdbm \
			   nshdcp \
			   nshdinfo \
			   nshdls \
			   printnsb \
			   u2nsfd \
			   unskew-hd-image

chk_sector_SOURCES = chk_sector.c \
					 nsd.h

compact_SOURCES = compact.c \
				  nsd.h

jdz80_SOURCES = jdz80.c \
				nsd.h

mkfs_ns_SOURCES = mkfs.ns.c \
				  nsd.h

mkhd_SOURCES = mkhd.c \
			   transient_hzn.c \
			   transient_adv.c \
			   transient_hzn.h \
			   transient_adv.h \
			   nsd.h

nsfd2u_SOURCES = nsfd2u.c \
				 nsd.h

nsfdls_SOURCES = nsfdls.c \
				 nsd.h

nsfilecalc_SOURCES = nsfilecalc.c \
					 nsd.h

nshdbm_SOURCES = nshdbm.c \
				 nsd.h

nshdcp_SOURCES = nshdcp.c \
				 nsd.h

nshdinfo_SOURCES = nshdinfo.c \
				   nsd.h

nshdls_SOURCES = nshdls.c \
				 nsd.h

printnsb_SOURCES = printnsb.c \
				   nsd.h \
				   print_nsb_tokens.h

u2nsfd_SOURCES = u2nsfd.c \
				 nsd.h

unskew_hd_image_SOURCES = unskew-hd-image.c \
						  nsd.h

